aws_nginx_ingress/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: app-01
      port:
        number: 80
  rules:
  - host: app.kruta.link
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-01
              port:
                number: 80
